--- a/go/panda-bubble-shooter.html
+++ b/go/panda-bubble-shooter.html
@@ -134,7 +134,7 @@
 
     <div class="row">
       <div class="col-md-10">
-  <iframe class="gm-iframe" id="gm-area" src="https://bonbang.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
+  <iframe class="gm-iframe" id="gm-area" src="https://sudoku-online.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
    <div style="padding-top: 10px;" class="container" align="Center"> 
       <button  class="btn theme-btn-1 btn-effect-1 text-uppercase" onclick="openFullscreen();">FullScreen</button>
 
@@ -209,7 +209,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/rooftop-snipers.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/rooftop-snipers.png">
+                            <img src="https://sudoku-online.github.io/img/rooftop-snipers.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -224,7 +224,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/basketball-line.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/basketball-line.png">
+                            <img src="https://sudoku-online.github.io/img/basketball-line.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -239,7 +239,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/rocket-soccer-derby.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/rocket-soccer-derby.png">
+                            <img src="https://sudoku-online.github.io/img/rocket-soccer-derby.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -254,7 +254,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/volley-random.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/volley-random.png">
+                            <img src="https://sudoku-online.github.io/img/volley-random.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -269,7 +269,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/flash-tetris.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/flash-tetris.png">
+                            <img src="https://sudoku-online.github.io/img/flash-tetris.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -284,7 +284,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/eugenes-life.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/eugenes-life.png">
+                            <img src="https://sudoku-online.github.io/img/eugenes-life.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -299,7 +299,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/friday-night-funkin.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/friday-night-funkin.png">
+                            <img src="https://sudoku-online.github.io/img/friday-night-funkin.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -314,7 +314,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/moto-x3m-spooky-land.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/moto-x3m-spooky-land.png">
+                            <img src="https://sudoku-online.github.io/img/moto-x3m-spooky-land.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -329,7 +329,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/tag.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/tag.png">
+                            <img src="https://sudoku-online.github.io/img/tag.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -344,7 +344,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/moto-x3m.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/moto-x3m.png">
+                            <img src="https://sudoku-online.github.io/img/moto-x3m.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -359,7 +359,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/brain-test-tricky-puzzles.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/brain-test-tricky-puzzles.png">
+                            <img src="https://sudoku-online.github.io/img/brain-test-tricky-puzzles.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -374,7 +374,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/soccer-skills-euro-cup.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/soccer-skills-euro-cup.png">
+                            <img src="https://sudoku-online.github.io/img/soccer-skills-euro-cup.png">
                             <div class="product-badge">       
                             </div>
                         </div>
