--- a/go/paper-io-2.html
+++ b/go/paper-io-2.html
@@ -134,7 +134,7 @@
 
     <div class="row">
       <div class="col-md-10">
-  <iframe class="gm-iframe" id="gm-area" src="https://bonbang.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
+  <iframe class="gm-iframe" id="gm-area" src="https://sudoku-online.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
    <div style="padding-top: 10px;" class="container" align="Center"> 
       <button  class="btn theme-btn-1 btn-effect-1 text-uppercase" onclick="openFullscreen();">FullScreen</button>
 
@@ -209,7 +209,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/blumgi-ball.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/blumgi-ball.png">
+                            <img src="https://sudoku-online.github.io/img/blumgi-ball.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -224,7 +224,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/city-car-driving-stunt-master.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/city-car-driving-stunt-master.png">
+                            <img src="https://sudoku-online.github.io/img/city-car-driving-stunt-master.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -239,7 +239,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/bullet-force.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/bullet-force.png">
+                            <img src="https://sudoku-online.github.io/img/bullet-force.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -254,7 +254,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/pop-it-master.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/pop-it-master.png">
+                            <img src="https://sudoku-online.github.io/img/pop-it-master.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -269,7 +269,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/stickman-climb-2.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/stickman-climb-2.png">
+                            <img src="https://sudoku-online.github.io/img/stickman-climb-2.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -284,7 +284,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/stick-defenders.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/stick-defenders.png">
+                            <img src="https://sudoku-online.github.io/img/stick-defenders.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -299,7 +299,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/thumb-fighter.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/thumb-fighter.png">
+                            <img src="https://sudoku-online.github.io/img/thumb-fighter.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -314,7 +314,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/2048-cupcakes.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/2048-cupcakes.png">
+                            <img src="https://sudoku-online.github.io/img/2048-cupcakes.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -329,7 +329,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/doge-miner.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/doge-miner.png">
+                            <img src="https://sudoku-online.github.io/img/doge-miner.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -344,7 +344,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/swingo.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/swingo.png">
+                            <img src="https://sudoku-online.github.io/img/swingo.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -359,7 +359,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/slope.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/slope.png">
+                            <img src="https://sudoku-online.github.io/img/slope.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -374,7 +374,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/factory-balls-forever.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/factory-balls-forever.png">
+                            <img src="https://sudoku-online.github.io/img/factory-balls-forever.png">
                             <div class="product-badge">       
                             </div>
                         </div>
